// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Comments renders empty 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <p
        className="text-secondary text-center mb-0"
      >
        No hay comentarios
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders intial fetching 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body text-center"
    >
      <i
        className="fa fa-circle-notch fa-spin"
      />
    </div>
  </div>
</div>
`;

exports[`Comments renders listing one 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        1 comentario
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Comment
        attachment={null}
        body="I am a text comment"
        created={1513920502005}
        downvotes={0}
        id="53675146"
        key="53675146"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        replies={
          Object {
            "after": "",
            "before": "",
            "count": 0,
            "items": Array [],
            "totalCount": 0,
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
    </div>
    <div
      className="card-body text-center"
    >
      <p
        className="text-secondary mb-0"
      >
        No hay más comentarios
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders listing two 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        2 comentarios
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Comment
        attachment={null}
        body="I am a text comment"
        created={1513920502005}
        downvotes={0}
        id={1}
        key="1"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        replies={
          Object {
            "after": "",
            "before": "",
            "count": 0,
            "items": Array [],
            "totalCount": 0,
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
      <Comment
        attachment={null}
        body="I am a text comment"
        created={1513920502005}
        downvotes={0}
        id={2}
        key="2"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        replies={
          Object {
            "after": "",
            "before": "",
            "count": 0,
            "items": Array [],
            "totalCount": 0,
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
    </div>
    <div
      className="card-body text-center"
    >
      <p
        className="text-secondary mb-0"
      >
        No hay más comentarios
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders listing two and load more 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        3 comentarios
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Comment
        attachment={null}
        body="I am a text comment"
        created={1513920502005}
        downvotes={0}
        id={1}
        key="1"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        replies={
          Object {
            "after": "",
            "before": "",
            "count": 0,
            "items": Array [],
            "totalCount": 0,
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
      <Comment
        attachment={null}
        body="I am a text comment"
        created={1513920502005}
        downvotes={0}
        id={2}
        key="2"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        replies={
          Object {
            "after": "",
            "before": "",
            "count": 0,
            "items": Array [],
            "totalCount": 0,
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
    </div>
  </div>
</div>
`;

exports[`Comments renders loading more 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        1 comentario
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Comment
        attachment={null}
        body="I am a text comment"
        created={1513920502005}
        downvotes={0}
        id="53675146"
        key="53675146"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        replies={
          Object {
            "after": "",
            "before": "",
            "count": 0,
            "items": Array [],
            "totalCount": 0,
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
    </div>
    <div
      className="card-body text-center"
    >
      <i
        className="fa fa-circle-notch fa-spin"
      />
    </div>
  </div>
</div>
`;

exports[`Comments renders with error 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body"
    >
      <h6
        className="card-title mb-0"
      >
        1 comentario
      </h6>
    </div>
    <div
      className="card-body"
    >
      <Comment
        attachment={null}
        body="I am a text comment"
        created={1513920502005}
        downvotes={0}
        id="53675146"
        key="53675146"
        owner={
          Object {
            "avatar": "https://a18.t26.net/avatares/2/3/4/5/120x120_nr_23454008.jpg?888730",
            "firstname": "Foo",
            "id": "l2m1j",
            "lastname": "Bar",
            "type": "user:summary",
            "username": "Foobar",
          }
        }
        replies={
          Object {
            "after": "",
            "before": "",
            "count": 0,
            "items": Array [],
            "totalCount": 0,
          }
        }
        state={Object {}}
        type="comment"
        upvotes={0}
      />
    </div>
    <div
      className="card-body text-center"
    >
      <p
        className="text-danger"
      >
        ¡Ratas! Algo salío mal. Refresca la página o haz clic sobre el siguiente botón.
      </p>
      <p
        className="my-0"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          onClick={[Function]}
        >
          Volver a intentar
        </button>
      </p>
    </div>
  </div>
</div>
`;

exports[`Comments renders with initial error 1`] = `
<div
  className="Comments mt-4"
>
  <div
    className="card bg-light"
  >
    <div
      className="card-body text-center"
    >
      <p
        className="text-danger"
      >
        ¡Ratas! Algo salío mal. Refresca la página o haz clic sobre el siguiente botón.
      </p>
      <p
        className="my-0"
      >
        <button
          className="btn btn-outline-secondary btn-sm"
          onClick={[Function]}
        >
          Volver a intentar
        </button>
      </p>
    </div>
  </div>
</div>
`;
